fixed delete function some style changes changed text to english

--- a/web/frontend/css/main.css
+++ b/web/frontend/css/main.css
@@ -23,24 +23,9 @@
 
 }
 
-#überschrift, #divformhorizontal{
+#insertheading, #divformhorizontal{
     text-align: left;
     margin-left: 4%;
 }
 
-#jumbo
-{
-    position: fixed;
-    right: 0;
-    left: 0;
-
-}
-
-
-#indexTable{
-
-    position: absolute;
-    margin-top: 20em;
-
-}
 
