--- a/web/frontend/views/insertfixedcosts.html
+++ b/web/frontend/views/insertfixedcosts.html
@@ -54,13 +54,17 @@
             <ul class="nav navbar-nav">
 
                 <li class="nav-item">
-                    <a href="index.html">Daten abfragen</a>
+                    <a href="index.html">Querying data</a>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Daten einfügen<span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown"
+                       role="button" aria-haspopup="true" aria-expanded="false">Insert data
+                        <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="insertsales.html">Sales</a></li>
-                        <li><a class="dropdown-item" href="insertfixedcosts.html">Fixed Costs</a></li>
+                        <li><a class="dropdown-item" href="insertsales.html">Sales</a>
+                        </li>
+                        <li><a class="dropdown-item"
+                               href="insertfixedcosts.html">Fixed Costs</a></li>
                     </ul>
                 </li>
             </ul>
@@ -101,9 +105,9 @@
     </form>
 </div>
 
-<div id="überschrift">
+<div id="insertheading">
     <h3>
-        FixedCosts Daten einfügen:
+        Insert fixed costs data:
     </h3>
 </div>
 
@@ -112,15 +116,23 @@
     <form data-toggle="validator" role="form" id="fixedcostsInsertForm" action="http://localhost:8080/fourschlag/api/TEST/fixedcosts/" method="post">
 
         <div class="form-group row">
-            <label for="period" class="col-xs-4 col-form-label">Period:</label>
+            <label for="period" class="col-xs-4 col-form-label">Period* :</label>
             <div class="col-xs-3">
                 <input class="form-control" type="number" id="period" name="period" required/><br/>
             </div>
         </div>
         <div class="form-group row">
-            <label for="region" class="col-xs-4 col-form-label">Region:</label>
+            <label for="region" class="col-xs-4 col-form-label">Region* :</label>
             <div class="col-xs-5">
                 <select class="form-control" id="region" name="region" required>
+                </select>
+                <br />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="subRegion" class="col-xs-4 col-form-label">Subregion* :</label>
+            <div class="col-xs-5">
+                <select class="form-control" id="subRegion" name="subregion" required>
                 </select>
                 <br />
             </div>
@@ -146,18 +158,10 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="sbu" class="col-xs-4 col-form-label">SBU:</label>
+            <label for="sbu" class="col-xs-4 col-form-label">SBU* :</label>
             <div class="col-xs-5">
                 <select class="form-control" id="sbu" name="sbu" required>
                 </select>
-                <br />
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="subRegion" class="col-xs-4 col-form-label">Subregion:</label>
-            <div class="col-xs-5">
-                <select class="form-control" id="subRegion" name="subregion" required>
-                    </select>
                 <br />
             </div>
         </div>
@@ -288,13 +292,13 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="planPeriod" class="col-xs-4 col-form-label">Plan Period:</label>
+            <label for="planPeriod" class="col-xs-4 col-form-label">Plan Period* :</label>
             <div class="col-xs-3">
                 <input class="form-control" type="number" id="planPeriod" name="plan_period" required/><br />
             </div>
         </div>
         <div class="form-group row">
-            <label for="entryType" class="col-xs-4 col-form-label">Entry Type:</label>
+            <label for="entryType" class="col-xs-4 col-form-label">Entry Type* :</label>
             <div class="col-xs-5">
                 <select class="form-control" id="entryType" name="entry_type" required>
 
@@ -319,10 +323,13 @@
 
         <div class="form-group row">
             <div class="modal-footer" id="buttons">
-                <button type="reset" class="btn btn-danger">Eingaben zurücksetzen
+                <div align="left">
+                    <p><i>* primary keys</i></p>
+                </div>
+                <button type="reset" class="btn btn-danger">Reset
                 </button>
                 <button type="submit" value="Submit" class="btn btn-success ">
-                    Eingaben absenden
+                    Submit
                 </button>
             </div>
         </div>
