--- a/web/frontend/views/index.html
+++ b/web/frontend/views/index.html
@@ -72,7 +72,8 @@
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown"
-                       role="button" aria-haspopup="true" aria-expanded="false">Insert data
+                       role="button" aria-haspopup="true" aria-expanded="false">Insert
+                        data
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="insertsales.html">Sales</a>
@@ -245,7 +246,7 @@
     </div>
 
 </span>
-<script src="../javascript/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
