some style changes renamed some variables

--- a/web/frontend/views/forecastsales.html
+++ b/web/frontend/views/forecastsales.html
@@ -73,7 +73,7 @@
 </nav>
 <div>
     <p>
-        Klick on a table row to edit or delete data.
+        Click on a table row to edit or delete data.
     </p>
 </div>
 <div>
@@ -182,7 +182,7 @@
 
 
 
-<script src="../javascript/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
