--- a/web/frontend/views/index.html
+++ b/web/frontend/views/index.html
@@ -245,7 +245,7 @@
     </div>
 
 </span>
-<script src="../javascript/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
