--- a/web/frontend/views/insertfixedcosts.html
+++ b/web/frontend/views/insertfixedcosts.html
@@ -337,7 +337,7 @@
     </form>
 </div>
 
-<script src="../javascript/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
