--- a/web/frontend/views/insertsales.html
+++ b/web/frontend/views/insertsales.html
@@ -274,7 +274,7 @@
 
 </div>
 
-<script src="../javascript/main.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 
 </body>
