--- a/web/frontend/views/index.html
+++ b/web/frontend/views/index.html
@@ -157,19 +157,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-1">
+                <div class="col-xs-2">
                     <div class="form-group">
                         <label class="col-lg-2 control-label"
                         ></label>
                         <div class="col-lg-2">
                             <button type="button"
                                     id="startbutton"
-                                    class="btn btn-default"
-                                    data-role="button"><img
-                                    width="120px"
-                                    height="120px"
-                                    src="../img/fourschlag-logo.png"/>
-
+                                    data-role="button">
                             </button>
 
                         </div>
@@ -177,7 +172,7 @@
                 </div>
                 <div class="col-xs-4">
                     <div class="form-group">
-                        <label class="col-lg-4 control-label"
+                        <label class="col-lg-1 control-label"
                         ></label>
                         <div class="col-lg-8">
                             <div>
