added functionality to delete in every keyspace

--- a/web/frontend/css/main.css
+++ b/web/frontend/css/main.css
@@ -19,7 +19,7 @@
     margin-left: 4%;
     margin-right: 20%;
     margin-bottom: 5%;
-    background: rgba(104, 143, 191, 0.38)
+    background-color: #eee;
 
 }
 
