Fixed update form

--- a/web/frontend/views/forecastfixedcosts.html
+++ b/web/frontend/views/forecastfixedcosts.html
@@ -162,10 +162,10 @@
                                readonly name="currency"/><br/>
                         <label for="userid">USERID:</label>
                         <input class="form-control" type="text" id="userid"
-                               readonly name="user_id"/><br/>
+                               name="user_id"/><br/>
                         <label for="entryts">ENTRY_TS:</label>
                         <input class="form-control" type="text" id="entryts"
-                               readonly name="entry_ts"/><br/>
+                               name="entry_ts"/><br/>
                         <label for="sbu">SBU:</label>
                         <input class="form-control" type="text" id="sbu"
                                readonly name="sbu"/><br/>
@@ -228,7 +228,7 @@
                                id="otherFixCost" name="other_fix_cost"/><br/>
                         <label for="depreciation">DEPRECIATION:</label>
                         <input class="form-control" type="number"
-                               id="depreciation" name="deprecation"/><br/>
+                               id="depreciation" name="depreciation"/><br/>
                         <label for="capCost">CAP_COST:</label>
                         <input class="form-control" type="number" id="capCost"
                                name="cap_cost"/><br/>
@@ -248,10 +248,10 @@
                                readonly name="entry_type"/><br/>
                         <label for="status">STATUS:</label>
                         <input class="form-control" type="text" id="status"
-                               readonly name="status"/><br/>
+                               name="status"/><br/>
                         <label for="usercomment">USERCOMMENT:</label>
                         <input class="form-control" type="text" id="usercomment"
-                               readonly name="usercomment"/><br/>
+                               name="usercomment"/><br/>
                         <div class="modal-footer">
                             <button id="deletebutton" type="button"
                                     class="btn btn-danger">
