--- a/web/frontend/views/forecastsales.html
+++ b/web/frontend/views/forecastsales.html
@@ -146,10 +146,10 @@
                                readonly name="currency"/><br/>
                         <label for="userid">USERID:</label>
                         <input class="form-control" type="text" id="userid"
-                               readonly name="userid"/><br/>
+                               name="userid"/><br/>
                         <label for="entryts">ENTRY_TS:</label>
                         <input class="form-control" type="text" id="entryts"
-                               readonly name="entry_ts"/><br/>
+                               name="entry_ts"/><br/>
                         <label for="productMainGroup">PRODUCT_MAIN_GROUP:</label>
                         <input class="form-control" type="text"
                                id="productMainGroup" readonly
@@ -186,10 +186,10 @@
                                readonly name="entry_type"/><br/>
                         <label for="status">STATUS:</label>
                         <input class="form-control" type="text" id="status"
-                               readonly name="status"/><br/>
+                               name="status"/><br/>
                         <label for="usercomment">USERCOMMENT:</label>
                         <input class="form-control" type="text" id="usercomment"
-                               readonly name="usercomment"/><br/>
+                               name="usercomment"/><br/>
                         <div class="modal-footer">
                             <button id="deletebutton" type="button"
                                     class="btn btn-danger">
