--- a/web/frontend/css/main.css
+++ b/web/frontend/css/main.css
@@ -45,3 +45,26 @@
     border: solid 1px #707070;
     box-shadow: 0 0 5px 1px #969696;
 }
+
+#spinner {
+    left: 950%;
+}
+
+span.glyphicon-refresh {
+    font-size: 8em;
+}
+
+.glyphicon.spinning {
+    animation: spin 1s infinite linear;
+    -webkit-animation: spin2 1s infinite linear;
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg); }
+    to { transform: scale(1) rotate(360deg); }
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
